static/css/styles.css
/* OVERWRITE FOUNDATION */

.centered.columns:last-child {
	float: none;
}

/* CUSTOM STYLES */
body {
	background: url('/static/img/subtle_dots.png');
}

#banner {
	background: url('/static/img/type.png');
	box-shadow: 0 0 15px;
	margin: 25px 0;
	padding: 75px 0;
	text-align: center;
}

#banner h1 {
	color: #EEE;
	font-family: 'Black Ops One', cursive;
	font-size: 64pt;
}

#banner .subheader {
	color: #EEE;
	font-size: 12pt;
}

nav.row {
	margin-bottom: 20px;
}

.button {
	box-shadow: none;
}

.thread {
	margin-bottom: 20px;
}

.post {
	/* background: #66D9EF; */
	padding: 20px 20px 0 20px;
}

.email_body {
	white-space: pre-wrap;
}

.replies {
	display: none;
}

.show_replies {
	/* background: #00B4FF; */
	padding: 20px;
}

.show_replies a {
	color: #EEE;
}

.reply {
	/* background: #00B4FF; */
	margin-bottom: 1px !important;
	padding: 20px 20px 0 20px;
}

.user_info {
	text-align: center;
}

.username {
	display: block;
	font-weight: bold;
	margin-top: 10px;
}

.time {
	border-top: 1px dotted #EEE;
	margin-top: 15px !important;
	padding-top: 15px;
	text-align: right;
}

.older_post {
	text-align: right;
}

.center {
	text-align: center;
}

